fix: fix issue on Mobile Safari where the header is outside the app container bounds.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,7 @@
 	justify-content: center;
 	overflow: hidden;
 	padding: 16px;
+	padding-top: 44px;
 	width: 100%;
 }
 
